force-app/main/default/objects/Camp_Day_Teachers__c/Camp_Day_Teachers__c.object-meta.xml
<CustomObject>
    <description>this object manage Camp Days related Teachers</description>
    <label>Camp Day Teachers</label>
    <nameField>
        <displayFormat>CampDayTeacher-{0000}</displayFormat>
        <label>Camp Day Teachers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Camp Day Teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>