force-app/main/default/objects/Camp_Day_Teachers__c/fields/Camp_Day__c.field-meta.xml
<CustomField>
    <fullName>Camp_Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field lookup of camp day object</description>
    <label>Camp Day</label>
    <referenceTo>Camp_Days__c</referenceTo>
    <relationshipLabel>Camp Day Teachers</relationshipLabel>
    <relationshipName>Camp_Day_Teachers</relationshipName>
    <type>Lookup</type>
</CustomField>