force-app/main/default/objects/Camp_Day_Teachers__c/fields/Camp_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Camp_Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field for manage camp teachers</description>
    <label>Camp Teacher</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Teacher</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Camp Day Teachers</relationshipLabel>
    <relationshipName>Camp_Day_Teachers</relationshipName>
    <type>Lookup</type>
</CustomField>