force-app/main/default/objects/Camp_Day_Teachers__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>this field manage teacher camp end time</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>