force-app/main/default/objects/Camp_Day_Teachers__c/fields/Start_time__c.field-meta.xml
<CustomField>
    <fullName>Start_time__c</fullName>
    <description>this field manage teacher camp start time</description>
    <label>Start time</label>
    <type>Time</type>
</CustomField>