force-app/main/default/objects/Camp_Day_Teachers__c/listViews/All_Active_Teacher.listView-meta.xml
<ListView>
    <fullName>All_Active_Teacher</fullName>
    <columns>NAME</columns>
    <columns>Camp_Teacher__c</columns>
    <columns>Status__c</columns>
    <columns>Camp_Day__c</columns>
    <columns>Start_time__c</columns>
    <columns>End_Time__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Teachers</label>
</ListView>